[package]
name = "traceback-derive"
version = "0.1.0"
edition = "2018"
categories = ["development-tools"]
description = "Procedural macros made to work with the traceback-error crate."
keywords = ["traceback"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tommy-ASD/traceback-derive"
rust-version = "1.31"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = [
    "full",
    "visit-mut",
    "parsing",
    "printing",
] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
